# OpenCV

./: .gitmodules  CMakeLists.txt
Sources/Private/: TrackingPopusk.cpp  main.cpp
